--- a/windows/windowspkg/StubbyPkg/StubbyPkg/Product.wxs
+++ b/windows/windowspkg/StubbyPkg/StubbyPkg/Product.wxs
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" Name="Stubby" Language="1033" Version="0.0.1" Manufacturer="Sinodun Internet Technologies Ltd." UpgradeCode="af30ca25-b1c5-404b-b1f1-d988dc7ca1a7">
+  <Product Id="*" Name="Stubby" Language="1033" Version="0.0.2" Manufacturer="Sinodun Internet Technologies Ltd." UpgradeCode="af30ca25-b1c5-404b-b1f1-d988dc7ca1a7">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Platform="x64" />
 
-    <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
+    <MajorUpgrade AllowSameVersionUpgrades="yes" DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate EmbedCab="yes" />
 
     <Feature Id="ProductFeature" Title="Stubby" Level="1">
@@ -22,13 +22,13 @@
   <Fragment>
     <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
       <Component Id="stubby.exe" Win64="yes">
-        <File Id="stubbby.exe" Source="/msys64/usr/bin/stubby.exe"  KeyPath="yes" Checksum="yes"/>
+        <File Id="stubbby.exe" Source="c:/msys64/mingw64/bin/stubby.exe"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="getdns_query.exe" Win64="yes">
-        <File Id="getdns_query.exe" Source="/msys64/usr/bin/getdns_query.exe"  KeyPath="yes" Checksum="yes"/>
+        <File Id="getdns_query.exe" Source="c:/msys64/mingw64/bin/getdns_query.exe"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="stubby.yml" Win64="yes">
-        <File Id="stubbby.yml" Source="/msys64/usr/etc/stubby/stubby.yml"  KeyPath="yes" Checksum="yes"/>
+        <File Id="stubbby.yml" Source="c:/msys64/mingw64/etc/stubby/stubby.yml"  KeyPath="yes" Checksum="yes" />
       </Component>
       <Component Id="README.txt" Win64="yes">
         <File Id="README.txt" Source="../../../README.txt"  KeyPath="yes" Checksum="yes"/>
@@ -38,6 +38,18 @@
       </Component>
       <Component Id="stubby_resetdns_windows.ps1" Win64="yes">
         <File Id="stubby_resetdns_windows.ps1" Source="../../../stubby_resetdns_windows.ps1"  KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Id="stubby_setdns_windows7.ps1" Win64="yes">
+        <File Id="stubby_setdns_windows7.ps1" Source="../../../stubby_setdns_windows7.ps1"  KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Id="stubby_resetdns_windows7.ps1" Win64="yes">
+        <File Id="stubby_resetdns_windows7.ps1" Source="../../../stubby_resetdns_windows7.ps1"  KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Id="stubby.bat" Win64="yes">
+        <File Id="stubby.bat" Source="../../../stubby.bat"  KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Id="stubby.xml" Win64="yes">
+        <File Id="stubby.xml" Source="../../../stubby.xml"  KeyPath="yes" Checksum="yes"/>
       </Component>
     </ComponentGroup>
   </Fragment>
