--- a/windows/stubby-64.wxs
+++ b/windows/stubby-64.wxs
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" Name="Stubby" Language="1033" Version="@PACKAGE_VERSION@" Manufacturer="Sinodun Internet Technologies Ltd." UpgradeCode="af30ca25-b1c5-404b-b1f1-d988dc7ca1a7">
+  <Product Id="*" Name="Stubby" Language="1033" Version="$(var.ProductVersion)" Manufacturer="Sinodun Internet Technologies Ltd." UpgradeCode="af30ca25-b1c5-404b-b1f1-d988dc7ca1a7">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
 
     <MajorUpgrade AllowSameVersionUpgrades="yes" DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate EmbedCab="yes" />
 
-    <Feature Id="StubbyFeature" Title="Stubby" Level="1">
-      <ComponentGroupRef Id="StubbyComponents" />
-    </Feature>
+    <FeatureGroupRef Id="StubbyFeatures" />
   </Product>
 
   <Fragment>
+    <FeatureGroup Id="StubbyFeatures">
+      <Feature Id="StubbyFeature" Title="Stubby" Level="1">
+        <ComponentGroupRef Id="StubbyComponents" />
+      </Feature>
+    </FeatureGroup>
+  </Fragment>
+
+  <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder">
+      <Directory Id="ProgramFiles64Folder">
         <Directory Id="INSTALLFOLDER" Name="Stubby" />
       </Directory>
     </Directory>
@@ -41,10 +47,10 @@
         <File Id="yaml.dll" Source="Stubby/yaml.dll"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="libssl.dll">
-        <File Id="libssl.dll" Source="Stubby/libssl-1_1.dll"  KeyPath="yes" Checksum="yes"/>
+        <File Id="libssl.dll" Source="Stubby/libssl-1_1-x64.dll"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="libcrypto.dll">
-        <File Id="libcrypto.dll" Source="Stubby/libcrypto-1_1.dll"  KeyPath="yes" Checksum="yes"/>
+        <File Id="libcrypto.dll" Source="Stubby/libcrypto-1_1-x64.dll"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="stubby.yml">
         <File Id="stubby.yml" Source="Stubby/stubby.yml"  KeyPath="yes" Checksum="yes" />
