--- a/windows/stubby-32.wxs
+++ b/windows/stubby-32.wxs
@@ -2,80 +2,15 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="*" Name="Stubby" Language="1033" Version="$(var.ProductVersion)" Manufacturer="Sinodun Internet Technologies Ltd." UpgradeCode="af30ca25-b1c5-404b-b1f1-d988dc7ca1a7">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
-
     <MajorUpgrade AllowSameVersionUpgrades="yes" DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate EmbedCab="yes" />
 
-    <FeatureGroupRef Id="StubbyFeatures" />
+    <FeatureRef Id="StubbyFeature" />
   </Product>
 
-  <Fragment>
-    <FeatureGroup Id="StubbyFeatures">
-      <Feature Id="StubbyFeature" Title="Stubby" Level="1">
-        <ComponentGroupRef Id="StubbyComponents" />
-      </Feature>
-    </FeatureGroup>
-  </Fragment>
-
-  <Fragment>
-    <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder">
-        <Directory Id="INSTALLFOLDER" Name="Stubby" />
-      </Directory>
+  <Directory Id="TARGETDIR" Name="SourceDir">
+    <Directory Id="ProgramFilesFolder">
+      <Directory Id="INSTALLFOLDER" Name="Stubby" />
     </Directory>
-  </Fragment>
-
-  <Fragment>
-    <ComponentGroup Id="StubbyComponents" Directory="INSTALLFOLDER">
-      <Component Id="stubby.exe">
-        <File Id="stubby.exe" Source="Stubby/stubby.exe"  KeyPath="yes" Checksum="yes"/>
-        <ServiceInstall Id="ServiceInstaller" Type="ownProcess" Name="Stubby" DisplayName="Stubby DNS Privacy Proxy"
-                        Description="Enable performing DNS name lookups over secure channels."
-                        Start="demand" ErrorControl="normal" Account="NT AUTHORITY\LocalService" />
-        <ServiceControl Id="StopService" Stop="both" Remove="uninstall" Name="Stubby" Wait="yes" />
-      </Component>
-      <Component Id="getdns_query.exe">
-        <File Id="getdns_query.exe" Source="Stubby/getdns_query.exe"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="getdns_server_mon.exe">
-        <File Id="getdns_server_mon.exe" Source="Stubby/getdns_server_mon.exe"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubres.dll">
-        <File Id="stubres.dll" Source="Stubby/stubres.dll"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="yaml.dll">
-        <File Id="yaml.dll" Source="Stubby/yaml.dll"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="libssl.dll">
-        <File Id="libssl.dll" Source="Stubby/libssl-1_1.dll"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="libcrypto.dll">
-        <File Id="libcrypto.dll" Source="Stubby/libcrypto-1_1.dll"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby.yml">
-        <File Id="stubby.yml" Source="Stubby/stubby.yml"  KeyPath="yes" Checksum="yes" />
-      </Component>
-      <Component Id="README.txt">
-        <File Id="README.txt" Source="Stubby/README.txt"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby_setdns_windows.ps1">
-        <File Id="stubby_setdns_windows.ps1" Source="Stubby/stubby_setdns_windows.ps1"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby_resetdns_windows.ps1">
-        <File Id="stubby_resetdns_windows.ps1" Source="Stubby/stubby_resetdns_windows.ps1"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby_setdns_windows7.ps1">
-        <File Id="stubby_setdns_windows7.ps1" Source="Stubby/stubby_setdns_windows7.ps1"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby_resetdns_windows7.ps1">
-        <File Id="stubby_resetdns_windows7.ps1" Source="Stubby/stubby_resetdns_windows7.ps1"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby.bat">
-        <File Id="stubby.bat" Source="Stubby/stubby.bat"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Id="stubby.xml">
-        <File Id="stubby.xml" Source="Stubby/stubby.xml"  KeyPath="yes" Checksum="yes"/>
-      </Component>
-    </ComponentGroup>
-  </Fragment>
+  </Directory>
 </Wix>
