--- a/windows/stubby-feature.wxs
+++ b/windows/stubby-feature.wxs
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+
+  <!-- OpenSSL DLL name suffix -->
+  <?if $(sys.BUILDARCH) = x64 ?>
+    <?define OpenSSLSuffix = "-x64" ?>
+  <?else ?>
+    <?define OpenSSLSuffix = "" ?>
+  <?endif ?>
+
   <Fragment>
     <Feature Id="StubbyFeature" Title="Stubby" Level="1">
       <ComponentGroupRef Id="StubbyComponents" />
@@ -26,10 +34,10 @@
         <File Id="yaml.dll" Source="Stubby/yaml.dll"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="libssl.dll">
-        <File Id="libssl.dll" Source="Stubby/libssl-1_1.dll"  KeyPath="yes" Checksum="yes"/>
+        <File Id="libssl.dll" Source="Stubby/libssl-1_1$(var.OpenSSLSuffix).dll"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="libcrypto.dll">
-        <File Id="libcrypto.dll" Source="Stubby/libcrypto-1_1.dll"  KeyPath="yes" Checksum="yes"/>
+        <File Id="libcrypto.dll" Source="Stubby/libcrypto-1_1$(var.OpenSSLSuffix).dll"  KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Id="stubby.yml">
         <File Id="stubby.yml" Source="Stubby/stubby.yml"  KeyPath="yes" Checksum="yes" />
