--- a/windows/stubby-feature.wxs
+++ b/windows/stubby-feature.wxs
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"  xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
 
   <!-- OpenSSL DLL name suffix -->
   <?if $(sys.BUILDARCH) = x64 ?>
@@ -16,10 +16,20 @@
     <ComponentGroup Id="StubbyComponents" Directory="INSTALLFOLDER">
       <Component Id="stubby.exe">
         <File Id="stubby.exe" Source="Stubby/stubby.exe"  KeyPath="yes" Checksum="yes"/>
-        <ServiceInstall Id="ServiceInstaller" Type="ownProcess" Name="Stubby" DisplayName="Stubby DNS Privacy Proxy"
+        <ServiceInstall Id="ServiceInstaller" Type="ownProcess"
+                        Name="Stubby" DisplayName="Stubby DNS Privacy Proxy"
                         Description="Enable performing DNS name lookups over secure channels."
-                        Start="demand" ErrorControl="normal" Account="NT AUTHORITY\LocalService" />
-        <ServiceControl Id="StopService" Stop="both" Remove="uninstall" Name="Stubby" Wait="yes" />
+                        Start="demand"
+                        ErrorControl="normal"
+                        Arguments="-w service">
+          <util:ServiceConfig FirstFailureActionType="restart"
+                              SecondFailureActionType="restart"
+                              ThirdFailureActionType="restart"
+                              ResetPeriodInDays="1"
+                              RestartServiceDelayInSeconds="0" />
+        </ServiceInstall>
+        <ServiceControl Id="StopService" Stop="both"
+                        Remove="uninstall" Name="Stubby" Wait="yes" />
       </Component>
       <Component Id="getdns_query.exe">
         <File Id="getdns_query.exe" Source="Stubby/getdns_query.exe"  KeyPath="yes" Checksum="yes"/>
