--- a/windows/stubby-feature.wxs
+++ b/windows/stubby-feature.wxs
@@ -11,6 +11,7 @@
   <Fragment>
     <Feature Id="StubbyFeature" Title="Stubby" Level="1">
       <ComponentGroupRef Id="StubbyComponents" />
+      <ComponentRef Id="ServiceRegistryEntries" />
     </Feature>
 
     <ComponentGroup Id="StubbyComponents" Directory="INSTALLFOLDER">
@@ -73,16 +74,18 @@
       <Component Id="stubby.xml">
         <File Id="stubby.xml" Source="Stubby/stubby.xml"  KeyPath="yes" Checksum="yes"/>
       </Component>
+    </ComponentGroup>
 
+    <DirectoryRef Id="INSTALLFOLDER">
       <Component Id="ServiceRegistryEntries">
         <RegistryKey Root="HKLM"
                      Key="SYSTEM\CurrentControlSet\Services\EventLog\Application\Stubby">
-          <RegistryValue Type="string" Name="EventMessageFile" Value="[INSTALLDIR]\stubres.dll" KeyPath="yes" />
-          <RegistryValue Type="string" Name="CategoryMessageFile" Value="[INSTALLDIR]\stubres.dll" />
+          <RegistryValue Type="string" Name="EventMessageFile" Value="[INSTALLFOLDER]stubres.dll" KeyPath="yes" />
+          <RegistryValue Type="string" Name="CategoryMessageFile" Value="[INSTALLFOLDER]stubres.dll" />
           <RegistryValue Type="integer" Name="TypesSupported" Value="7" />
           <RegistryValue Type="integer" Name="CategoryCount" Value="1" />
         </RegistryKey>
       </Component>
-    </ComponentGroup>
+    </DirectoryRef>
   </Fragment>
 </Wix>
