Service updates: Default the windows service to a dedicated config file for compatibility with the GUI. Have the service change it's start up type on run so it will automatically start on system reboot, go back to manual when stopped. Documentation updates.

--- a/windows/stubby-feature.wxs
+++ b/windows/stubby-feature.wxs
@@ -18,8 +18,8 @@
       <Component Id="stubby.exe">
         <File Id="stubby.exe" Source="Stubby/stubby.exe"  KeyPath="yes" Checksum="yes"/>
         <ServiceInstall Id="ServiceInstaller" Type="ownProcess"
-                        Name="Stubby" DisplayName="Stubby DNS Privacy Proxy"
-                        Description="Enable performing DNS name lookups over secure channels."
+                        Name="Stubby" DisplayName="Stubby DNS Privacy stub resolver"
+                        Description="Enable performing DNS name lookups over encrypted channels."
                         Start="demand"
                         ErrorControl="normal"
                         Arguments="-w service">
@@ -52,6 +52,9 @@
       </Component>
       <Component Id="stubby.yml">
         <File Id="stubby.yml" Source="Stubby/stubby.yml"  KeyPath="yes" Checksum="yes" />
+      </Component>
+      <Component Id="stubbyservice.yml">
+        <File Id="stubbyservice.yml" Name="stubbyservice.yml" Source="Stubby/stubby.yml"  KeyPath="yes" Checksum="yes" />
       </Component>
       <Component Id="README.txt">
         <File Id="README.txt" Source="Stubby/README.txt"  KeyPath="yes" Checksum="yes"/>
